--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.12.0
 click==8.3.1
 colorama==0.4.6
+dill==0.4.0
 fastapi==0.123.4
 filelock==3.20.0
 fsspec==2025.12.0
@@ -17,15 +18,23 @@ numpy==2.3.5
 pandas==2.3.3
 pika==1.3.2
 pillow==12.0.0
+psutil==7.1.3
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
+qiskit==1.4.5
+qiskit-aer==0.17.2
+qiskit-algorithms==0.4.0
+qiskit-machine-learning==0.8.4
+rustworkx==0.17.1
 scikit-learn==1.7.2
-scipy==1.16.3
+scipy==1.15.3
 six==1.17.0
 starlette==0.50.0
+stevedore==5.6.0
+symengine==0.13.0
 sympy==1.14.0
 threadpoolctl==3.6.0
 torch==2.9.1
